<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_titlebar">
        <Button
            android:id="@+id/btn_myfavor_back"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/bg_btn_back_selector" />

        <Button
            android:id="@+id/btn_myfavor_sync"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_btn_favor_sync_selector" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我的收藏"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            android:textSize="20sp"/>
    </RelativeLayout>


    <FrameLayout
        android:id="@+id/fl_myfavor_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rg_menu"
        android:layout_below="@+id/rl_title"></FrameLayout>

    <RadioGroup
        android:id="@+id/rg_myfavor_menu"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_tab_at_bottom_of_flow"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_myfavor_heavy"
            style="@style/MenuRadioButton"
            android:layout_margin="10dp"
            android:checked="true"
            android:text="@string/radio_button_heavy" />


        <RadioButton
            android:id="@+id/rb_myfavor_comic"
            style="@style/MenuRadioButton"
            android:layout_margin="10dp"
            android:text="@string/radio_button_comic" />

        <RadioButton
            android:id="@+id/rb_myfavor_meng"
            style="@style/MenuRadioButton"
            android:layout_margin="10dp"
            android:text="@string/radio_button_meng" />

        <RadioButton
            android:id="@+id/rb_myfavor_gif"
            style="@style/MenuRadioButton"
            android:layout_margin="10dp"
            android:text="@string/radio_button_gif" />
    </RadioGroup>

</RelativeLayout>
